--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -82,6 +82,6 @@
   cursor: pointer
   &__line
     display: block
-    width: 100%
+    width: 16px
     height: 1px
     background-color: $text-color
